launchpad-buildd (155) UNRELEASED; urgency=medium

  * Refactor lpbuildd.pottery.intltool to avoid calling chdir.
  * Merge TranslationTemplatesBuildState.{INSTALL,GENERATE} into a single
    state.
  * Convert generate-translation-templates to the new Operation framework.
  * Use Python 3-style print functions.
  * Make urllib imports Python 3-compatible.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 08 Sep 2017 13:42:17 +0100

launchpad-buildd (154) xenial; urgency=medium

  * The previous patch was labouring under mistaken assumptions: it's
    actually the mounted-dev Upstart job that we race with in trusty
    containers, so neuter that instead.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 19 Oct 2017 10:29:30 +0100

launchpad-buildd (153) xenial; urgency=medium

  * Defend against racing with udev to create loop devices in trusty
    containers (LP: #1723216).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 18 Oct 2017 07:57:32 +0100

launchpad-buildd (152) xenial; urgency=medium

  [ Colin Watson ]
  * Accept a "debug" entry in livefs arguments, which enables detailed
    live-build debugging.
  * Set SHELL=/bin/sh in snap builds, since it was previously passed through
    by the chroot backend and some build systems expect SHELL to be set
    (LP: #1716739).

  [ Robert C Jennings ]
  * LXD: Do not drop sys_rawio capability (LP: #1716060).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 13 Sep 2017 14:51:48 +0100

launchpad-buildd (151) xenial; urgency=medium

  * Run snapd with SNAPPY_STORE_NO_CDN=1, since the buildd network isn't
    allowed to talk to the CDN.
  * Create loop devices in LXD containers manually using mknod rather than
    as LXD-managed devices, since the latter involves bind-mounting
    individual devices which confuses some livecd-rootfs scripts.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 08 Sep 2017 01:41:20 +0100

launchpad-buildd (150) xenial; urgency=medium

  * Tell LXD to disable seccomp on powerpc, since it doesn't work there on