@@ -9,7 +9,10 @@ from __future__ import print_function
 
 import sys
 
-from xmlrpclib import ServerProxy
+try:
+    from xmlrpc.client import ServerProxy
+except ImportError:
+    from xmlrpclib import ServerProxy
 
 if len(sys.argv) != 2:
     print("Usage: %s <chroot_sha1>" % sys.argv[0])
